# aws-stt-tts-example

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: code-structure.mdc  project-structure.mdc  voice-assistant.mdc
.devcontainer/: devcontainer.json
env/: dev.env
src/: config.py  constant.py  llm.py  logger.py  tts.py
src/tools/: adjust_light.py
